# OC_Dikan_Nikita

./: CMakeLists.txt  README.md
MainApp/: main.cpp
Number/: CMakeLists.txt
Number/MainApp/: MainApp.cpp  MainApp.vcxproj
Number/MainApp/x64/Debug/: vc145.idb
Number/MainApp/x64/Debug/MainApp.tlog/: CL.command.1.tlog
Number/Number/x64/Debug/Number.tlog/: Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog
Number/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
Number/Vector/x64/Debug/: Vector.dll.recipe  Vector.ilk
Vector/: CMakeLists.txt  Vector.h
lab_01/MainApp/: CMakeLists.txt
lab_01_linux/Number/: Number.cpp  Number.h
lab_01_linux/Vector/: CMakeLists.txt  Vector.cpp
lab_01_windows/: Number.slnx
lab_01_windows/Number/: Number.slnx
lab_01_windows/Number/MainApp/x64/Debug/: MainApp.exe.recipe  MainApp.ilk
lab_01_windows/Number/MainApp/x64/Debug/MainApp.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MainApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_01_windows/Number/Number/: Number.cpp  Number.h  Number.vcxproj
lab_01_windows/Number/Number/x64/Debug/: Number.pch
lab_01_windows/Number/Number/x64/Debug/Number.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib.command.1.tlog
lab_01_windows/Number/Vector/x64/Debug/: vc145.idb
lab_01_windows/Number/x64/Debug/: Number.idb  Number.lib  Vector.exp  Vector.lib
lab_02_linux/: MatrixMultiplicationLinux.cpp
lab_02_windows_and_for_all_systems/: MatrixMultiplicationWindows.cpp
(+8 files in other folders)
